range: Ensure we don't underallocate the highlight gadget

This was causing warnings in HighContrast.

https://bugzilla.gnome.org/show_bug.cgi?id=770614